cmake_minimum_required(VERSION 3.16)
project(curl_test)
set(TARGET_CURL curl_test)
set(SRC_LIST main.cpp http_request.cpp http_request_results.cpp http_request_processor.cpp http_request_mgr.cpp)

include_directories(${CURL_LIB_INCLUDE} ${BOOST_ROOT})
#if (CMAKE_BUILD_TYPE STREQUAL Debug)
#	link_directories(D:/libs/libcurl/debug)
#	target_link_libraries(${TARGET_CURL} libcurl-d.lib)
#	message("Debug mode")
#else ()
link_directories(${CURL_LIB_DIR})
add_executable(${TARGET_CURL} ${SRC_LIST})
target_link_libraries(${TARGET_CURL} libcurl_imp.lib)

#	message("Release mode")
#endif()
message(STATUS "This is PROJECT_SOURCE_DIR " ${PROJECT_SOURCE_DIR})
message(STATUS "This is CMAKE_SOURCE_DIR " ${CMAKE_SOURCE_DIR})